--- a/test/fixtures/recipes.yml
+++ b/test/fixtures/recipes.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  item: MyString
   ingredients: MyText
   procedure: MyText
+  category_id: 1
 
 two:
-  item: MyString
   ingredients: MyText
   procedure: MyText
+  category_id: 1
